# CitySearcher

./: CHANGELOG_CPP20.md  CMakeLists.txt  Main.qml  README.md  main.cpp
concepts/: service_concepts.h
factories/: city_search_service_factory.cpp  city_search_service_factory.h
interfaces/: icity_search_service.h
models/: city_list_model.cpp  city_list_model.h  city_model.cpp  city_model.h  nominatim_search_request.cpp  nominatim_search_request.h
services/: mock_city_search_service.cpp  mock_city_search_service.h  nominatim_client.cpp  nominatim_client.h  nominatim_service.cpp  nominatim_service.h
tests/: CMakeLists.txt  README.md  test_city_list_model.cpp  test_city_search_viewmodel.cpp  test_mock_city_search_service.cpp  test_service_factory.cpp
translations/: citysearcher_de.ts
utils/: debug_logger.h
viewmodels/: city_search_viewmodel.cpp  city_search_viewmodel.h
